# Mp4Decrypt

./: CMakeLists.txt  README.md  build_linux.sh  build_macos.sh  build_win.bat
.github/workflows/: build_win.yml
tests/: CMakeLists.txt  MemoryLeakTest.cpp
